src/test/ui/regions/regions-static-bound.ll.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/regions-static-bound.rs:19:5
   |
LL |     t //[ll]~ ERROR E0312
   |     ^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the lifetime 'a as defined on the function body at 18:24
  --> $DIR/regions-static-bound.rs:18:24
   |
LL | fn static_id_wrong_way<'a>(t: &'a ()) -> &'static () where 'static: 'a {
   |                        ^^

error[E0621]: explicit lifetime required in the type of `u`
  --> $DIR/regions-static-bound.rs:25:5
   |
LL | fn error(u: &(), v: &()) {
   |             --- help: add explicit lifetime `'static` to the type of `u`: `&'static ()`
LL |     static_id(&u); //[ll]~ ERROR explicit lifetime required in the type of `u` [E0621]
   |     ^^^^^^^^^ lifetime `'static` required

error[E0621]: explicit lifetime required in the type of `v`
  --> $DIR/regions-static-bound.rs:28:5
   |
LL | fn error(u: &(), v: &()) {
   |                     --- help: add explicit lifetime `'static` to the type of `v`: `&'static ()`
...
LL |     static_id_indirect(&v); //[ll]~ ERROR explicit lifetime required in the type of `v` [E0621]
   |     ^^^^^^^^^^^^^^^^^^ lifetime `'static` required

error: aborting due to 3 previous errors

Some errors occurred: E0312, E0621.
For more information about an error, try `rustc --explain E0312`.
